# sfepy

./: .appveyor.yml  .gitignore  .hgignore  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  INSTALL.txt  LICENSE  MANIFEST.in  Makefile  README  README.rst  README.txt  RELEASE_NOTES.txt  VERSION  btrace_python  build_helpers.py  convert.py  eigen.py  extractor.py  extractor_sfepy.py  findSurf.py  friction_slip.py  gen  genDocs.py  genDocsXML.py  genPerMesh.py  genhtml  homogen.py  igaio.py  igalib.py  init_sfe.py  init_sfepy.py  isfepy  phonon.py  plotPerfusionCoefs.py  plot_nurbs.py  postproc.py  probe.py  (+25 more)
benchmark-asv/: asv.conf.json
benchmarks-asv/: asv.conf.json
database/: MANIFEST  Makefile.dist  acoustics.mesh  box.geo  kostka_medium.mesh  kostka_medium_tetra.mesh  plackaplacata.mesh  pul_klikatak2.mesh  simple.mesh  simple.vtk  square.geo  t.1.ele  t.1.node  t1.geo.sphere-tri
deployment-CI/: miniconda-install.ps1
doc/: Makefile  Makefile.dist  archived_news.rst  archived_support.rst  conf.py  dev_info.rst  dev_topics.rst  developer_guide.rst  development.rst  documentation.rst  downloads.rst  doxygen.config  ebcs_implementation.rst  examples.rst  faq.rst  gallery_template.html  index.rst  installation.rst  introduction.rst  license.rst  linear_combination_bc.rst  links.inc  make.bat  man-sfepy-run.rst  man-sfepy-view.rst  manpages.rst  mat_optim.rst  module_sfepy_applications_simple_app.rst  module_sfepy_base_base.rst  module_sfepy_base_conf.rst  module_sfepy_base_log.rst  module_sfepy_base_tasks.rst  module_sfepy_geom_geometry.rst  module_sfepy_geom_tetgen.rst  module_sfepy_homogenization_phono.rst  module_sfepy_homogenization_prolong.rst  module_sfepy_homogenization_utils.rst  module_sfepy_postprocess_dataset_manager.rst  module_sfepy_solvers_eigen.rst  module_sfepy_solvers_oseen.rst  (+15 more)
eldesc/: 2_3.py  2_3_P1.py  2_3_P1B.py  2_3_P2.py  2_4.py  2_4_Q1.py  3_4.py  3_4_P0.py  3_4_P1.py  3_4_P1B.py  3_4_P2.py  3_4_P2B.py  3_5.py  3_6.py  3_8.py  3_8_Q1.py  3_8_Q2.py  Makefile.dist  Makefile.inc
examples/: MANIFEST  Makefile.dist  Makefile.inc  compare_elastic_materials.py  el3.mesh  live_plot.py  osteonT1_11.mesh  rs_correctors.py  run_dg_parametric_study.py
geom/: Makefile.dist  femlab.py  geometry.py  gmsh.py  meshutils.py  progressbar.py  tetgen.py
input/: MANIFEST  Makefile.dist  Makefile.inc  acoustics.py  active_fibres.py  biot.py  biot_npbc.py  complex.py  hyperelastic.py  inputUtils.py  kostka.py  le.py  linear_elastic.py  navier_stokes.py  octahedron.py  perfusion_tl.py  pfdpm_permeability.py  phono.py  piezo.py  poisson.py  poisson_parametric_study.py  schroed.py  schroed2.py  sinbc.py  stabilized_navier_stokes.py  subdomains.py  time_poisson.py  valec.py
meshes/: Makefile.dist
pytests/: meshio_test.py  pytest_utils.py
script/: Makefile.dist  blockgen.py  config.py  convert.py  convert_doc.py  convert_mesh.py  cylindergen.py  dg_1D_vizualizer.py  dg_plot_1D.py  edit_identifiers.py  edit_neu.py  evalForms.py  eval_ns_forms.py  eval_tl_forms.py  extract_edges.py  extract_surface.py  genDocsXML.py  gen_gallery.py  gen_iga_patch.py  gen_legendre_simplex_base.py  gen_lobatto1d_c.py  gen_lobatto_pyx.py  gen_mesh_prev.py  gen_release_notes.py  gen_serendipity_basis.py  gen_solver_table.py  gen_term_table.py  hfm3_mesh.py  kill_generic.sh  kill_simple  make_spkg.py  mesh_to_vtk.py  neu_mesh.py  plot_condition_numbers.py  plot_logs.py  plot_mesh.py  plot_quadratures.py  plot_times.py  python_version.py  save_basis.py  (+7 more)
scripts-common/: extractor.py  homogen.py  phonon.py  postproc.py  probe.py  run_tests.py  schroedinger.py  shaper.py  simple.py  test_install.py
sfe/: Makefile.dist  Makefile.inc
sfepy/: Makefile.dist  Makefile.inc  __init__.py  config.py  setup.py  version.py
sfepy/discrete/common/extmods/: CMakeLists.txt  _fmfield.pxd  _fmfield.pyx  _geommech.pxd  _geommech.pyx  assemble.pyx  cmapping.pxd  cmapping.pyx  cmesh.pxd  cmesh.pyx  common.h  common_python.c  crefcoors.pyx  fmfield.c  fmfield.h  geommech.c  geommech.h  geomtrans.c  geomtrans.h  mappings.pxd  mappings.pyx  mesh.c  mesh.h  meshutils.c  meshutils.h  refcoors.c  refcoors.h  refmaps.c  refmaps.h  setup.py  sort.c  types.h  types.pxd
sfepy/discrete/fem/extmods/: CMakeLists.txt  _fmfield.pxd  _fmfield.pyx  _geommech.pxd  _geommech.pyx  bases.pyx  cmesh.pyx  crefcoors.pyx  geommech.c  geomtrans.c  geomtrans.h  lagrange.c  lagrange.h  lobatto1d.h  lobatto1d_template.c  lobatto1d_template.h  lobatto_bases.pyx  mappings.pxd  mesh.c  mesh.h  meshutils.c  meshutils.h  refcoors.c  refcoors.h  setup.py  sort.c  sort.h
sfepy/discrete/iga/extmods/: CMakeLists.txt  cnurbs.pyx  igac.pyx  nurbs.c  nurbs.h  setup.py
sfepy/mechanics/extmods/: CMakeLists.txt  ccontres.pyx  contres.c  contres.h  setup.py
sfepy/terms/extmods/: CMakeLists.txt  Makefile.dist  Makefile.inc  __init__.py  formSDCC.c  form_sdcc.c  form_sdcc.h  setup.py  terms.h  terms.i  terms.pyx  termsAcoustic.c  termsAcoustic.h  termsAdjointNavierStokes.c  termsAdjointNavierStokes.h  termsBasic.c  termsBasic.h  termsBiot.c  termsBiot.h  termsElectric.c  termsElectric.h  termsHDPM.c  termsHDPM.h  termsHyperElasticity.c  termsHyperElasticity.h  termsLaplace.c  termsLaplace.h  termsLinElasticity.c  termsLinElasticity.h  termsMass.c  termsMass.h  termsNavierStokes.c  termsNavierStokes.h  termsPiezo.c  termsPiezo.h  termsSurface.c  termsSurface.h  termsVolume.c  termsVolume.h  terms_acoustic.c  (+24 more)
tests/: MANIFEST  Makefile.dist  Makefile.inc  conftest.py  sympy_operators.py  test_assembling.py  test_base.py  test_cmesh.py  test_conditions.py  test_declarative_examples.py  test_dg_field.py  test_dg_input_adv_diff.py  test_dg_input_advection.py  test_dg_input_advection1.py  test_dg_input_laplace.py  test_dg_input_quarteroni.py  test_dg_terms_calls.py  test_domain.py  test_ebcs.py  test_eigenvalue_solvers.py  test_elasticity_small_strain.py  test_fem.py  test_field_dg.py  test_functions.py  test_high_level.py  test_homogenization_engine.py  test_homogenization_perfusion.py  test_hyperelastic_tlul.py  test_input_acoustics.py  (+107 more)
(+1701 files in other folders)
