[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=46.4",
    "wheel",
	"Cython>=0.29.30",
    "matplotlib",
    "meshio",
    "numpy==1.20.*; python_version <= '3.9'", # meshio undeclared constraint.
    "oldest-supported-numpy; python_version > '3.9'",
    "pyparsing",
    "scipy",
    "tables",
]
