[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "scikit-build>=0.16.7",
    "cmake>=3.9",
    "ninja<=1.11.1.1",
    "setuptools>=46.4",
    "wheel",
    "Cython>=0.29.30",
    "matplotlib",
    "meshio",
    "numpy==1.20.*; python_version <= '3.9'", # meshio undeclared constraint.
    "numpy<2; python_version > '3.9'",
    "pyparsing",
    "scipy",
    "tables",
]
